syntax = "proto3";

package nft;

import "koinos/options.proto";

// @description Returns the token's name
// @read-only true
message name_arguments {
}

message name_result {
   string value = 1;
}

// @description Returns the token's symbol
// @read-only true
message symbol_arguments {
}

message symbol_result {
   string value = 1;
}

// @description Returns the color of a token
// @read-only true
message color_of_arguments {
   uint64 token_id = 1 [jstype = JS_STRING];
}

message color_of_result {
   string value = 1;
}

// @description Gets the balance of an owner
// @read-only true
message balance_of_arguments {
   bytes owner = 1 [(koinos.btype) = ADDRESS];
}

message balance_of_result {
   uint64 value = 1 [jstype = JS_STRING];
}

// @description Gets the owner of a token
// @read-only true
message owner_of_arguments {
   uint64 token_id = 1 [jstype = JS_STRING];
}

message owner_of_result {
   bytes value = 1 [(koinos.btype) = ADDRESS];
}

// @description Mints a new token for the caller
// @read-only false
message mint_arguments {
   bytes to = 1 [(koinos.btype) = ADDRESS];
   uint64 token_id = 2 [jstype = JS_STRING];
   string color = 3;
}

message mint_result {
   bool value = 1;
}

// @description Changes the color of a token
// @read-only false
message paint_arguments {
   uint64 token_id = 1 [jstype = JS_STRING];
   string color = 2;
}

message paint_result {
   bool value = 1;
}

// @description Transfers a token
// @read-only false
message transfer_arguments {
   bytes from = 1 [(koinos.btype) = ADDRESS];
   bytes to = 2 [(koinos.btype) = ADDRESS];
   uint64 token_id = 3 [jstype = JS_STRING];
}

message transfer_result {
   bool value = 1;
}

// events
message mint_event {
   bytes to = 1 [(koinos.btype) = ADDRESS];
   uint64 id = 2 [jstype = JS_STRING];
   string color = 3;
}

message paint_event {
   uint64 id = 1 [jstype = JS_STRING];
   string color = 2;
}

message transfer_event {
   bytes from = 1 [(koinos.btype) = ADDRESS];
   bytes to = 2 [(koinos.btype) = ADDRESS];
   uint64 id = 3 [jstype = JS_STRING];
}

// objects
message token_object {
   bytes owner = 1 [(koinos.btype) = ADDRESS];
   string color = 2;
}

message balance_object {
   uint64 value = 1 [jstype = JS_STRING];
}